# LAMBDAn

./: README.md  index.html  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: import.rs  mod.rs  quiz.rs
src/components/history/: HistoryView.tsx
src/components/quiz/: MediaOverlay.tsx  QuestionCard.tsx  QuizEndScreen.tsx  QuizView.tsx  RefsOverlay.tsx  RetakeView.tsx
src/components/settings/: SettingsView.tsx
src/components/shared/: Logo.tsx  Modal.tsx  TopBar.tsx
src/store/: index.ts
src/types/: index.ts
src/utils/: quiz.ts  useGamepad.ts  uuid.ts
